# autoAPI

./: .dockerignore  .editorconfig  .gitignore  .golangci.yml  CODE_OF_CONDUCT.md  CONTRIBUTE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  go.mod  go.sum  main.go
.cargo/: config.toml
.github/: FUNDING.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: integration-tests.yml  release.yml  run-tests.yml
config/: config.go  doc_cn.md  doc_en.md
configFile/: configFile.go
configFile/parser/: parser.go  parser_test.go
configFile/validator/: validator.go
dbAdapter/: dbAdapter.go
dbAdapter/mysql/: dbAdapter.go
dbAdapter/pgsql/: dbAdapter.go
dbadapter/: dbadapter.go
dbadapter/mysql/: mysql.go
dbadapter/pgsql/: pgsql.go
devops/: devops.go
docs/: config.tosd
example/: student.json  student.toml  student.yaml  studentCreateSql.sql  studentWithCreateSQL.yaml
example-configs/: course.toml
generator/: devopsGenerator.go  generator.go  goGenerator.go
generator/apiGenerator/: importGenerator.go  typeTransformer.go
generator/apigenerator/: apigenerator.go
generator/cicdGenerator/: cicdGenerator.go
generator/cicdgenerator/: cicdgenerator.go
generator/githubActionsGenerator/: githubActionsGenerator.go
generator/golang/: generator.go
integration/basic-crud/: api.yml  (+2 more)
ir/: ir.go
nilFiller/: nilFiller.go
src/: main.rs
table/: table.go
typeTransform/: golangTypeTransformer.go  typeTransformer.go
withCase/: withCase.go
yamlParser/: yamlParser.go
(+87 files in other folders)
