[package]
name = "auto-api"
version = "2.0.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tera = "1.12.1"
convert_case = "0.4.0"
pluralize-rs = "0.1.0"
include_dir = { version = "0.6.0", features = ["search"] }
serde = {version="1.0.126", features = ["derive"]}
serde_yaml = "0.8.17"
serde_json = "1.0.64"
toml = "0.5.8"
anyhow = "1.0.41"
structopt = "0.3.21"

[profile.release]
lto = "fat"
